add support for dishes not of type
